# codex

./: .gitignore  AGENTS.md  README.md  dev-features.md  issues.md  justfile  plan-2.md  plan.md  wants.md
CodexMenuBar/: Package.swift  README.md
CodexMenuBar/.build/: build.db  debug.yaml
CodexMenuBar/Sources/CodexMenuBar/: app-delegate.swift  app-server-client.swift  menu-bar-view-model.swift  models.swift  status-menu-controller.swift  terminal-launcher.swift  turn-menu-row-view.swift  turn-store.swift
CodexMenuBar/Tests/CodexMenuBarTests/: menu-bar-view-model-tests.swift  turn-store-history-tests.swift
codex-rs/: Cargo.toml  README.md
codex-rs/.config/: nextest.toml
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server/src/: bespoke_event_handling.rs  codex_message_processor.rs  lib.rs  message_processor.rs  outgoing_message.rs  transport.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: main.rs
codex-rs/codexd/: BUILD.bazel  Cargo.toml
codex-rs/codexd/src/: daemon.rs  lib.rs  producer.rs  protocol.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: ask_prompt.md  auth.rs  chat_title.rs  client_common.rs  codex.rs  codex_thread.rs  features.rs  lib.rs  mcp_connection_manager.rs  mcp_tool_call.rs  plan_prompt.md  state_db.rs  user_notification.rs  util.rs
codex-rs/exec/src/: cli.rs  event_processor_with_human_output.rs  event_processor_with_jsonl_output.rs  (+1 more)
codex-rs/tui/: Cargo.toml  tooltips.txt
docs/: config.md  example-config.md  exec.md  getting-started.md  install.md  slash_commands.md
scripts/: show-terminal-input.py
(+272 files in other folders)
