[package]
name = "codex-codexd"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_codexd"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
codex-app-server-protocol = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }
